# kowari

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
examples/: basic_usage.rs
src/: index.rs  lib.rs  persistence.rs  query.rs  storage.rs
tests/: integration_tests.rs
vector_db/: Cargo.toml  minimal_test  minimal_test.rs  simple_test  simple_test.rs  test_fixes.rs
vector_db/examples/: basic_usage.rs  debug_file.rs  debug_local_storage.rs  local_storage_demo.rs  simple_local_test.rs  sqlite_binary_demo.rs
vector_db/src/: binary_index.rs  collection_manager.rs  index.rs  lib.rs  local_storage.rs  sqlite_storage.rs  storage.rs  utils.rs  vector.rs
vector_db/tests/: core_tests.rs  integration_tests.rs  local_storage_tests.rs  sqlite_binary_tests.rs
