[package]
name = "vector_db"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
memmap2 = "0.9"
ndarray = { version = "0.15", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false 