[package]
name = "vector_db"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
memmap2 = "0.9"
ndarray = { version = "0.15", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
rand = "0.8"
rusqlite = { version = "0.30", features = ["bundled"] }
byteorder = "1.4"
bincode = "1.3"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
